--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "vite-react-typescript-starter",
+  "homepage": "https://Gaipov5791.github.io/powerstation-present/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -7,12 +8,13 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run duild",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@emailjs/browser": "^4.3.3",
     "framer-motion": "^11.0.8",
-    "gh-pages": "^6.2.0",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
